feat(daemon): give each sandbox its own process so the pool can boot (#3091)